--- a/question-2.css
+++ b/question-2.css
@@ -1,29 +1,21 @@
-<div class='box box1'></div>
-<div class='wrap'>
-  <div class='box box2'></div>
-  <div class='box box2'></div>
-</div>
-
+<div class="left"></div>
+<div class="right"></div>
 <style>
-  body {background: #6592CF;
-       height:100%;
-       margin:0;
-       }
-  .wrap{
-    display:flex;
-    width:240px;
-    margin:0 auto;
-  }
-  .box{
+  body{background:#926927;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      gap:40px;}
+  div {
     width: 100px;
-    height: 150px;
-    background: #060F55;
-    margin:0 auto;
+    height: 200px;
+    background: #dd6b4d;
+    background:#F8B140;
   }
-  .box1 {
-    border-radius:0 0 50px 50px;
+  .right{
+    border-radius:100px 0 0 100px;
   }
-    .box2 {
-    border-radius:50px 50px 0 0;
+  .left{
+    border-radius:0 100px 100px 0;
   }
 </style>
